# qradiomics

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  qradiomics-pacs.example.yaml
.github/workflows/: publish.yml
examples/: README.md  acrin_heart_classification.sh  ibsi_validation.sh  lidc_idri_nodule.sh  lung1_survival.sh  lung1_survival_colab.ipynb  nsclc_cetuximab_survival.sh
examples/nextflow/: README.md  qradiomics.nf
pipelines/: README.md  _build.sh  _qr_resolve.sh  monitor.py  run_all.sh  run_cohort.sh  run_cohort_nf.sh  test_all.sh
pipelines/acrin_heart/: README.md  deploy.sh  main.nf  plan.json  prefect_flow.py
pipelines/common/: run_workflow.sh
pipelines/ibsi1/: ibsi1_config_a.yaml  run_ibsi1_parity.py  run_ibsi1_pysera_parity.py
pipelines/lidc_idri/: README.md  ahsn_detection.py  ahsn_hardneg.py  ahsn_proxy.py  deploy.sh  extract_cir.py  extract_features.py  extract_lungx.py  lidc_pm_ids.txt  main.nf  mesh_to_voxel_compare.py  methods_compare.py  plan.json  prefect_flow.py  reproduce_cir.py  reproduce_papers.py  run.sh  validate_lcsr.py
pipelines/lung1/: README.md  deploy.sh  main.nf  nextflow.config  plan.json  prefect.yaml  prefect_flow.py
pipelines/nsclc_cetuximab/: README.md  deploy.sh  main.nf  (+2 more)
qradiomics/: __init__.py  extractor.py  extractor_registry.py  pattern_loader.py  pysera_extractor.py  rtools_extractor.py  workflow.py
reports/: PUBLIC_DATASET_FRAMEWORK.md  reproducibility.md
scripts/: kickoff.sh  smoke.py
tests/: test_analytics.py  test_analyze_classify.py  test_analyze_importance.py  test_analyze_survival.py  test_atomic.py  test_bench_cli_fixes.py  test_bench_external_rows.py  test_classification_calibration.py  test_classification_registry.py  test_cli_main.py  test_convert_manifest.py  test_convert_rtstruct.py  test_data_model.py  test_delta.py  test_extract_worker_crash.py  test_extractor_registry.py  test_ibsi1_phantom_parity.py  test_ibsi1_pysera_parity.py  test_image_parity.py  test_lidc.py  test_ml_benchmark.py  test_ml_grouped_cv.py  test_ml_multiclass.py  test_multiclass_calibration.py  test_pacs.py  test_parity_golden.py  test_pet_suv.py  test_phantom_fda_layouts.py  test_pipeline_parallel.py  test_preamble.py  test_pysera_extractor.py  test_qa_scorer.py  test_results_merge.py  test_rtools_extractor.py  test_verification_harness.py
(+106 files in other folders)
